Added doc table

--- a/app/views/donk/index.html.erb
+++ b/app/views/donk/index.html.erb
@@ -1,2 +1,8 @@
 <h1>Donk As A Service</h1>
 <p>You know what you wanna do with that (as a service)?</p>
+
+<table>
+    <tr><th>endpoint</th><th>params</th><th>example</th></tr>
+    <tr><td>/kick</td><td>bpm</td><td><a href="/kick?bpm=120">/kick?bpm=120</a></td></tr>
+    <tr><td>/clap</td><td>bpm</td><td><a href="/clap?bpm=120">/clap?bpm=120</a></td></tr>
+</table>
